fix layout on tablet sizes

--- a/app/components/hero-slider/hero-slider.module.scss
+++ b/app/components/hero-slider/hero-slider.module.scss
@@ -1,7 +1,7 @@
 $color-brown: var(--brown);
 $color-white: var(--white);
 $color-black: var(--black);
-$border-radius: 10px;
+$border-radius: 15px;
 $image-item-height: 50vh;
 
 .hero_slider {
@@ -9,7 +9,7 @@ $image-item-height: 50vh;
 		position: relative;
 		display: flex;
 		flex-wrap: wrap;
-		gap: 1.5em;
+		gap: 0;
 		justify-content: center;
 
 		.images_col,
@@ -18,10 +18,6 @@ $image-item-height: 50vh;
 		}
 
 		.images_col {
-			@media (min-width: 768px) {
-				width: 60%;
-			}
-
 			height: $image-item-height;
 			overflow: hidden;
 
@@ -36,7 +32,6 @@ $image-item-height: 50vh;
 						width: 100%;
 						height: 100%;
 						object-fit: cover;
-						border-radius: $border-radius;
 					}
 				}
 
@@ -44,24 +39,10 @@ $image-item-height: 50vh;
 					opacity: 1;
 				}
 			}
-
-			@media (min-width: 768px) {
-				height: 70vh;
-				min-height: 500px;
-
-				.image_item {
-					.fig {
-						height: 70vh;
-						min-height: 600px;
-					}
-				}
-			}
 		}
 
 		.content_col {
-			@media (min-width: 768px) {
-				width: 40%;
-			}
+			width: 100%;
 		}
 
 		.content {
@@ -69,7 +50,6 @@ $image-item-height: 50vh;
 			display: flex;
 			flex-wrap: nowrap;
 			overflow: hidden;
-			border-radius: $border-radius;
 			height: 100%;
 
 			.content_item {
@@ -159,15 +139,60 @@ $image-item-height: 50vh;
 					}
 				}
 			}
+		}
+	}
+}
 
-			@media (min-width: 768px) {
+@media (min-width: 768px) {
+	.hero_slider {
+		.container {
+			.images_col {
+				width: 60%;
+				height: 50vh;
+				min-height: 520px;
+
+				.image_item {
+					.fig {
+						height: 50vh;
+						min-height: 520px;
+						border-radius: $border-radius;
+					}
+				}
+			}
+
+			.content_col {
+				width: 40%;
+			}
+
+			.content {
+				border-radius: $border-radius;
+			}
+
+			.controls {
 				top: 40%;
 			}
-		}
 
-		@media (min-width: 768px) {
 			flex-wrap: nowrap;
 			flex-direction: row-reverse;
+			gap: 1rem;
+		}
+	}
+}
+
+@media (min-width: 1024px) {
+	.hero_slider {
+		.container {
+			.images_col {
+				height: 75vh;
+				min-height: 500px;
+
+				.image_item {
+					.fig {
+						height: 75vh;
+						min-height: 500px;
+					}
+				}
+			}
 		}
 	}
 }
